Fix alignment of PostHeader relationship icons

--- a/src/components/posts/PostHeader.sass
+++ b/src/components/posts/PostHeader.sass
@@ -26,6 +26,8 @@
 .PostHeader .RelationsGroup,
 .RepostHeader .RelationsGroup
   margin-left: rem(10)
+  margin-top: rem(-2)
+
 
 .PostHeaderLink
   vertical-align: middle
